# foundry-dev-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml  setup.cfg  setup.py  tldr.md  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: blank_issue.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Configuration_usage.md  FoundryFileSystem_usage.md  FoundryRestClient_usage.md  SSO_usage.md  architecture.md  changelog.md  cli.md  cli_usage.md  conf.py  configuration.md  contributors.md  develop.md  index.md  installation.md  license.md  pyproject.toml  requirements.txt  s3.md  usage.md  usage_and_examples.md
docs/dev/: architecture.md  contribute.md  index.md  testing.md
docs/dev/architecture/: api_client_implementation.md  errors.md  extending.md  foundry_context_implementation.md  token_provider_implementation.md  transforms_implementation.md
docs/dev/plans/: oauth-cli-code-signing.md
docs/examples/: api.md  aws-lambda.md  dataset.md  index.md
docs/getting_started/: cli.md  foundry_dev_tools.md  git_credential_helper.md  index.md  installation.md  s3.md  sso.md  transforms.md  v1.md
docs/pictures/: foundry-dev-tools_connections.drawio
examples/: upload_files.py
examples/dataproxy/: Readme.md  file.csv  push_data_to_foundry.py
examples/lambda/: .gitignore  Dockerfile  README.md  lambda_src.py  pixi.toml
examples/lambda/cfn/: lambda.yaml  staging.yaml
libs/foundry-dev-tools/: README.md  pyproject.toml
libs/foundry-dev-tools/src/foundry_dev_tools/: __init__.py  cached_foundry_client.py  foundry_api_client.py
libs/foundry-dev-tools/src/foundry_dev_tools/_optional/: adbc_flightsql.py  foundry_platform_sdk.py
libs/foundry-dev-tools/src/foundry_dev_tools/cli/: build.py  config.py  git.py  git_credential_foundry.py  info.py  main.py  stubs.py
libs/foundry-dev-tools/src/foundry_dev_tools/clients/: api_client.py  build2.py  catalog.py  compass.py  context_client.py  data_health.py  data_proxy.py  foundry_search.py  foundry_sql_server.py  foundry_stats.py  jemma.py  magritte_coordinator.py  metadata.py  multipass.py  public_ontologies_client.py  s3_client.py  scheduler.py  schema_inference.py  tables.py
libs/foundry-dev-tools/src/foundry_dev_tools/config/: config.py  config_types.py  context.py  token_provider.py
libs/foundry-dev-tools/src/foundry_dev_tools/errors/: __init__.py  compass.py  config.py  dataset.py  handling.py  meta.py  multipass.py  sql.py
libs/foundry-dev-tools/src/foundry_dev_tools/helpers/: __init__.py
libs/foundry-dev-tools/src/foundry_dev_tools/helpers/multipass/: __init__.py  group.py  principal.py  user.py
libs/foundry-dev-tools/src/foundry_dev_tools/public_sdk/: __init__.py  _core.py  auth.py  datasets.py
libs/foundry-dev-tools/src/foundry_dev_tools/resources/: __init__.py  dataset.py  folder.py  group.py  principal.py  resource.py  user.py
libs/foundry-dev-tools/src/foundry_dev_tools/utils/: api_types.py  async_s3.py  cli.py  clients.py  compat.py  config.py  misc.py  public_api_types.py  repo.py  s3.py
libs/foundry-dev-tools/src/foundry_dev_tools/utils/caches/: metadata_store.py  spark_caches.py
libs/foundry-dev-tools/src/foundry_dev_tools/utils/converter/: foundry_spark.py
libs/foundry-oauth-cli/: Cargo.toml
libs/foundry-oauth-cli/src/: cache.rs  cli.rs  config.rs  error.rs  log.rs  main.rs  oauth.rs  server.rs
libs/oauth-cli/: Cargo.toml
libs/oauth-cli/src/: cache.rs  cli.rs  config.rs  error.rs  log.rs  main.rs  oauth.rs  server.rs
libs/transforms/: README.md  pyproject.toml
libs/transforms/src/transforms/: __init__.py  errors.py
libs/transforms/src/transforms/api/: __init__.py  _configure.py  _dataset.py  _decorators.py  _transform.py
src/foundry_dev_tools/: __about__.py  __init__.py  cached_foundry_client.py  config.py  foundry_api_client.py  fsspec_impl.py
src/foundry_dev_tools/Exceptions/: FoundryDevToolsError.py  __init__.py
src/foundry_dev_tools/_optional/: __init__.py  pandas.py  polars.py  pyarrow.py  pyspark.py
src/foundry_dev_tools/cli/: __init__.py  build.py  config.py  git_credential_foundry.py  info.py  main.py  s3.py  stubs.py
src/foundry_dev_tools/clients/: __init__.py  build2.py  catalog.py  compass.py  context_client.py  data_proxy.py  foundry_sql_server.py  foundry_stats.py  jemma.py  metadata.py  multipass.py  s3_client.py  schema_inference.py
src/foundry_dev_tools/config/: __init__.py  config.py  config_types.py  token_provider.py
src/foundry_dev_tools/errors/: compass.py  config.py  dataset.py  handling.py  meta.py  sql.py
src/foundry_dev_tools/exceptions/: __init__.py  generic.py
src/foundry_dev_tools/resources/: __init__.py  dataset.py  folder.py  resource.py
src/foundry_dev_tools/utils/: __init__.py  api_types.py  async_s3.py  cli.py  clients.py  compat.py  config.py  importer.py  misc.py  repo.py  s3.py  spark.py  token_provider.py
src/transforms/: __init__.py
src/transforms/api/: __init__.py  _configure.py  _dataset.py  _decorators.py  _transform.py  tmp
tests/: conftest.py  foundry_mock_client.py  test_cached_foundry_client.py  test_cached_foundry_client_integration.py  test_cli_build.py  test_config.py  test_exceptions.py  test_foundry_api.py  test_foundry_local_deprecation.py  test_foundry_mock.py  test_foundry_spark_converters.py  test_foundry_sql_client.py  test_fsspec_impl.py  test_importer.py  test_multipass_tpa.py  test_s3.py  test_spark_caches.py  test_token_provider.py  test_transforms.py  test_transforms_integration.py  test_utils_misc.py  test_utils_repo.py  utils.py
tests/integration/: conftest.py  test_cached_foundry_client.py  test_general_api.py  test_transforms.py  utils.py
tests/integration/clients/: test_build2.py  test_compass.py  test_foundry_sql_server.py  test_magritte_coordinator.py  test_multipass.py
tests/integration/resources/: test_dataset.py  test_group.py  (+1 more)
tests/unit/: conftest.py  mocks.py  test_cached_foundry_client.py  test_foundry_api_client.py  test_optional.py  test_s3.py  test_transforms.py
(+49 files in other folders)
