[project]
name = "foundry-dev-tools"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
  { name = "Jonas Wunderlich", email = "jonas.wunderlich@merckgroup.com" },
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
  "-e file:///${PROJECT_ROOT}/libs/transforms",
  "-e file:///${PROJECT_ROOT}/libs/foundry-dev-tools[s3,testing,integration]",
  "pre-commit",
  "ruff",
  "pytest",
]

[tool.pdm.scripts]
unit = "pytest tests/unit"
integration = "pytest tests/integration"
lint = "pre-commit run --all-files {args:--show-diff-on-failure}"
ci.composite = ["lint", "unit"]

[tool.pytest.ini_options]
addopts = "--verbose"
norecursedirs = ["dist", "build"]
testpaths = "tests"
asyncio_mode = "auto"

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.coverage]
report.skip_covered = true
paths.source = ["libs/transforms/src", "libs/foundry-dev-tools/src"]
report.exclude_also = ["if TYPE_CHECKING:"]
