# [metadata]
# license_files =
#     LICENSE
# url = https://github.com/emdgroup/foundry-dev-tools

# [options.packages.find]
# where = src
# exclude =
#     tests

# [test]
# extras = True

# [build_sphinx]
# source_dir = docs
# build_dir = build/sphinx

# [devpi:upload]
# # Options for the devpi: PyPI server and packaging tool
# # VCS export must be deactivated since we are using setuptools-scm
# no-vcs = 1
# formats = bdist_wheel

# [flake8]
# exclude =
#     .tox
#     build
#     dist
#     .eggs
#     docs/conf.py

# [pycodestyle]
# max-line-length = 120

