[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "foundry-dev-tools"
readme = "README.md"
description = "Seamlessly run your Palantir Foundry Repository transforms code on your local machine."
requires-python = ">=3.10"
authors = [
  { name = "Nicolas Renkamp", email = "nicolas.renkamp@merckgroup.com" },
  { name = "Jonas Wunderlich", email = "jonas.wunderlich@merckgroup.com" },
]
license = { text = "Apache-2.0" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "requests",
  "palantir-oauth-client",
  "platformdirs",
  "tomli; python_version <\"3.11\"",
  "typing_extensions; python_version < \"3.11\"",
  "backports-datetime-fromisoformat==2.0.1; python_version < \"3.11\"",
  "click",
  "inquirer",
  "websockets",
  "rich",
  "packaging",
  "tomli_w",
]
dynamic = ["version"]

[project.scripts]
fdt = "foundry_dev_tools.cli.main:cli"
git-credential-foundry = "foundry_dev_tools.cli.git_credential_foundry:_helper"

[project.optional-dependencies]
s3 = ["aiobotocore[boto3]"]
full = ["foundry-dev-tools-transforms", "foundry-dev-tools[s3]"]

[project.urls]
Homepage = "https://emdgroup.github.io/foundry-dev-tools"
Documentation = "https://emdgroup.github.io/foundry-dev-tools"
Source = "https://github.com/emdgroup/foundry-dev-tools"
Tracker = "https://github.com/emdgroup/foundry-dev-tools/issues"
Changelog = "https://emdgroup.github.io/foundry-dev-tools/changelog.html"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
write_to = "foundry_dev_tools/__about__.py"
write_template = "__version__ = '{}'"
