[package]
name = "foundry-oauth-cli"
version = "0.1.0"
edition = "2021"
description = "Standalone OAuth2 CLI for Foundry, designed for Claude Code apiKeyHelper"

[[bin]]
name = "foundry-oauth"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tiny_http = "0.12"
open = "5"
dirs = "5"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
fd-lock = "4"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
