[package]
name = "foundry-dev-tools-oauth-cli"
version = "0.1.0"
edition = "2021"
description = "Standalone OAuth2 CLI for Palantir Foundry"

[[bin]]
name = "foundry-dev-tools-oauth"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "blocking", "native-tls", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.10"
tiny_http = "0.12"
open = "5"
dirs = "6"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
fd-lock = "4"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
