[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "foundry-dev-tools-transforms"
readme = "README.md"
description = "Seamlessly run your Palantir Foundry Repository transforms code on your local machine."
requires-python = ">=3.10"
authors = [
  { name = "Nicolas Renkamp", email = "nicolas.renkamp@merckgroup.com" },
  { name = "Jonas Wunderlich", email = "jonas.wunderlich@merckgroup.com" },
]
license = { text = "Apache-2.0" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "foundry-dev-tools",
  "typing_extensions; python_version < \"3.11\"",
  "pyspark>=3.0.0",
  # pyspark is not fully compatible with numpy 2.0 https://github.com/apache/spark/pull/47083
  "numpy<2",
  "fs",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://emdgroup.github.io/foundry-dev-tools"
Documentation = "https://emdgroup.github.io/foundry-dev-tools"
Source = "https://github.com/emdgroup/foundry-dev-tools"
Tracker = "https://github.com/emdgroup/foundry-dev-tools/issues"
Changelog = "https://emdgroup.github.io/foundry-dev-tools/changelog.html"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
write_to = "transforms/__about__.py"
write_template = "__version__ = '{}'"
